--- a/.env.template
+++ b/.env.template
@@ -10,7 +10,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=db_alexander
+DB_DATABASE=mydb
 DB_USERNAME=db_username
 DB_PASSWORD=db_password
 
