--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,15 @@
 version: '3'
 services:
   code.dev:
-    image: php:8.1-apache
+    build:
+      context: ./docker
+      dockerfile: Dockerfile
     container_name: dev_php
     ports:
       - '${APP_PORT:-80}:80'
       - '${APP_SSL_PORT:-443}:443'
     volumes:
-      - ./src:/var/www/html
+      - .:/var/www/html
     networks:
       - myapp_network
     depends_on:
