--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: ./docker
       dockerfile: Dockerfile
-    container_name: dev_php
+    container_name: '${APP_NAME}'
     ports:
       - '${APP_PORT:-80}:80'
       - '${APP_SSL_PORT:-443}:443'
