--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -15,12 +15,14 @@ RUN sed -ri -e 's!/var/www/!/var/www/html/public!g' /etc/apache2/apache2.conf /e
 # Instalar composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
-RUN apt-get update && \
-    apt-get install -y git zip && \
-    docker-php-ext-install zip
+RUN su - \
+    && apt-get update \
+    && apt-get install -y git unzip zip \
+    && apt-get install -y libzip-dev \
+    && docker-php-ext-install zip
     
 # Ejecutar composer
-RUN test -d vendor || composer install
+# RUN test -d vendor || composer install
 
 # Exponer el puerto 80 para que pueda ser accedido desde fuera del contenedor
 EXPOSE 80
